--- a/htdocs/EVSE/control1.php.save.2
+++ b/htdocs/EVSE/control1.php.save.2
@@ -1,94 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/l$
-<html>
-<head>
-        <title>Steuerung Elektrotankstelle</title>
-<!-- define some style elements-->
-<style>
-label,a
-{
-        font-family : Arial, Helvetica, sans-serif;
-        font-size : 14px;
-}
-
-</style>
-
-</head>
-
-<body background="hgnew.jpg">
-<!--[if lt IE 9]><script language="javascript" type="text/javascript" src="excanvas.js"></script><![endif]-->
-<script language="javascript" type="text/javascript" src="../jsplot/jquery.min.js"></script>
-<script language="javascript" type="text/javascript" src="../jsplot/jquery.jqplot.min.js"></script>
-<link rel="stylesheet" type="text/css" href="../jsplot/jquery.jqplot.css" />
-
-<style type="text/css">
-
-.plot {
-    margin-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#chart4 .jqplot-meterGauge-tick, #chart4 .jqplot-meterGauge-label {
-    font-size: 12pt;
-}
-</style>
-
-<div id="chart4" class="plot" style="width:500px;height:300px;"></div>
-
-<script type="text/javascript" src="../jsplot/plugins/jqplot.meterGaugeRenderer.js"></script>
-<hr>
-<form action="<?php echo htmlentities($_SERVER['PHP_SELF']); ?>" method="post">
-        <label for='formControl'>Wähle den Befehl aus</label><br>
-        <select name="formControl">
-                <option value="">...</option>
-                <option value="GC">Strom (Min/Max)</option>
-                <option value="GE">Aktueller Strom</option>
-                <option value="SC">Setze Strom</option>
-                <option value="GS">Aktueller Status</option>
-                <option value="FE">Start Ladung</option>
-                <option value="FS">Stopp Ladung</option>
-                <option value="ST starthr startmin endhr endmin">Setze Timer</option>
-                <option value="ST 0 0 0 0">Reset Timer</option>
-                <option value="GT">Aktuelle Zeit</option>
-                <option value="S1">Setze Zeit</option>
-                <option value="FR">Reset EVSE</option>
-        </select>
-        <input type="checkbox" name="auto" checked>Automatikbetrieb<br>
-          <table border="0" cellpadding="5" cellspacing="0" bgcolor="#E0E0E0">
-          <tr>
-            <td>&nbsp;</td>
-            <td align="right">Vorgabestrom</td>
-            <td><input name="curr" type="number" size="2" max="16" min="6" value="6"></td>
-          </tr>
-          <tr>
-            <td><input type="checkbox" name="start">&nbsp;<br></td>
-            <td align="right">Start Stunde:Minute</td>
-            <td><input name="starthr" type="number" size="2" max="23" min="0" value="8"></td>
-            <td><input name="startmin" type="number" size="2" max="59" min="0" value="30"></td>
-          </tr>
-          <tr>
-            <td><input type="checkbox" name="stop">&nbsp;<br></td>
-            <td align="right">Stop Stunde:Minute</td>
-            <td><input name="stophr" type="number" size="2" max="23" min="0" value="01"></td>
-            <td><input name="stopmin" type="number" size="2" max="59" min="0" value="30"></td>
-          </tr>
-          <tr>
-            <td>&nbsp;</td>
-            <td align="right" valign="top">Kommentar:</td>
-            <th colspan="4" align="left"><textarea name="Text" rows="2" cols="50"></textarea></th>
-          </tr>
-          <tr>
-            <td>&nbsp;</td>
-            <td align="right">Formular:</td>
-            <td>
-            <input type="submit" name="formSubmit" value=" Absenden ">
-            <input type="reset" value=" Abbrechen">
-          </td>
-          </tr>
-          </table>
-</form>
-<hr>
-<h3>Debugging:</h3>
 <?php
 header("Content-Type: text/html; charset=utf-8");
 $filepath='/run/values';
@@ -139,20 +48,18 @@ foreach(array_keys($values) as $orbis) {
   if(key_exists($orbis, $tmpvalues)){
     $values[$orbis]=$tmpvalues[$orbis];
   }
-  echo "$description[$orbis]$values[$orbis]";
-  echo ("<br>");
 }
 
 $status = json_decode(file_get_contents("/run/status.json"), true);
 $auto = $status['Automatik'];
+$text1 = "";
 //print_r($_POST);
 if(isset($_POST['formSubmit'])) {
-  echo "<hr>";
   $aControl = $_POST['formControl'];
-  if(!isset($aControl)) {
-    echo("<p>Du hast nichts ausgewählt!</p>\n");
+  if(!isset($aControl) || ($aControl == "-")) {
+    $text1 = "<p>Du hast nichts ausgewählt!</p>\n";
   } else {
-    echo ("<p>Ausgewählt wurde $aControl</p>\n");
+    $text1 = "<p>Ausgewählt wurde $aControl</p>\n";
     if($aControl == "SC") {
       $curr = $_POST['curr'];
       if(isset($curr)) {
@@ -168,8 +75,8 @@ if(isset($_POST['formSubmit'])) {
     $status['Automatik'] = "Ja";
   }
   $stop = $_POST['stop'];
-  if(!isset($stop)) {
-    $status['Stopzeit'] = $_POST['stophr'] . ":" . $_POST['stopmin'];;
+  if(isset($stop)) {
+    $status['Stopzeit'] = "\"" . $_POST['stophr'] . ":" . $_POST['stopmin'];;
   } else {
     $status['Stopzeit'] = "-";
   }
@@ -177,7 +84,121 @@ if(isset($_POST['formSubmit'])) {
   //var_dump($status);
   $tmp =  file_put_contents("/run/status.json", json_encode($status), LOCK_EX);
   //echo "<br>:.$tmp.";
+  $stopzeit = array("01", "30");
+  $setstop = FALSE;
+  if($status['Stopzeit'] != "-"){
+    $stopzeit = explode(":", $status['Stopzeit']);
+    $setstop = TRUE;
+  }
+}
+?>
 
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/l$
+<html>
+<head>
+        <title>Steuerung Elektrotankstelle</title>
+<!-- define some style elements-->
+<style>
+label,a
+{
+        font-family : Arial, Helvetica, sans-serif;
+        font-size : 14px;
+}
+
+</style>
+
+</head>
+
+<body background="hgnew.jpg">
+<!--[if lt IE 9]><script language="javascript" type="text/javascript" src="excanvas.js"></script><![endif]-->
+<script language="javascript" type="text/javascript" src="../jsplot/jquery.min.js"></script>
+<script language="javascript" type="text/javascript" src="../jsplot/jquery.jqplot.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../jsplot/jquery.jqplot.css" />
+
+<style type="text/css">
+
+.plot {
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#chart4 .jqplot-meterGauge-tick, #chart4 .jqplot-meterGauge-label {
+    font-size: 12pt;
+}
+</style>
+
+<div id="chart4" class="plot" style="width:500px;height:300px;"></div>
+
+<script type="text/javascript" src="../jsplot/plugins/jqplot.meterGaugeRenderer.js"></script>
+<hr>
+<? global $stopzeit; print_r($stopzeit); echo "test";?>
+<form action="<?php echo htmlentities($_SERVER['PHP_SELF']); ?>" method="post">
+        <label for='formControl'>Wähle den Befehl aus</label><br>
+        <select name="formControl">
+                <option value="-">...</option>
+                <option value="GC">Strom (Min/Max)</option>
+                <option value="GE">Aktueller Strom</option>
+                <option value="SC">Setze Strom</option>
+                <option value="GS">Aktueller Status</option>
+                <option value="FE">Start Ladung</option>
+                <option value="FS">Stopp Ladung</option>
+                <option value="ST starthr startmin endhr endmin">Setze Timer</option>
+                <option value="ST 0 0 0 0">Reset Timer</option>
+                <option value="GT">Aktuelle Zeit</option>
+                <option value="S1">Setze Zeit</option>
+                <option value="FR">Reset EVSE</option>
+        </select>
+        <input type="checkbox" name="auto" <? global $status; if($status['Automatik'] == "Ja") echo "checked"?>>Automatikbetrieb<br>
+          <table border="0" cellpadding="5" cellspacing="0" bgcolor="#E0E0E0">
+          <tr>
+            <td>&nbsp;</td>
+            <td align="right">Vorgabestrom</td>
+            <td><input name="curr" type="number" size="2" max="16" min="6" value="<? global $status; echo $status['GE']?>"></td>
+          </tr>
+          <tr>
+            <td><input type="checkbox" name="start">&nbsp;<br></td>
+            <td align="right">Start Stunde:Minute</td>
+            <td><input name="starthr" type="number" size="2" max="23" min="0" value="8"></td>
+            <td><input name="startmin" type="number" size="2" max="59" min="0" value="30"></td>
+          </tr>
+          <tr>
+            <td><input type="checkbox" name="stop" <? global $setstop; if($setstop) echo "checked"?>>&nbsp;<br></td>
+            <td align="right">Stop Stunde:Minute</td>
+            <td><input name="stophr" type="number" size="2" max="23" min="0" value="<? global $stopzeit; echo $stopzeit[0]?>"></td>
+            <td><input name="stopmin" type="number" size="2" max="59" min="0" value="<? global $stopzeit; echo $stopzeit[1]?>"></td>
+          </tr>
+          <tr>
+            <td>&nbsp;</td>
+            <td align="right" valign="top">Kommentar:</td>
+            <th colspan="4" align="left"><textarea name="Text" rows="2" cols="50"></textarea></th>
+          </tr>
+          <tr>
+            <td>&nbsp;</td>
+            <td align="right">Formular:</td>
+            <td>
+            <input type="submit" name="formSubmit" value=" Absenden ">
+            <input type="reset" value=" Abbrechen">
+          </td>
+          </tr>
+          </table>
+</form>
+<hr>
+<h3>Debugging:</h3>
+
+<?
+global $values;
+global $text1;
+global $status;
+foreach(array_keys($values) as $orbis) {
+  echo "$description[$orbis]$values[$orbis]";
+  echo ("<br>");
+}
+
+//print_r($_POST);
+if(isset($_POST['formSubmit'])) {
+  echo "<hr>";
+  echo $text1;
 }
 echo "<hr>";
 foreach(array_keys($status) as $key) {
